--- a/frame.html
+++ b/frame.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>botão</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
 <body>
+    <!--Botão copia e cola do bootstrap - aula 1 30/05-->
     <div class="conteiner text-center mt-5">
         <h1 class="text-primary">olá!</h1>
         <p class="lead">Primeira pagina usando bootstrap</p>
         <button class="btn btn-primary">click aqui</button>
 
     </div>
+    
 </body>
 </html>
