--- a/sitedoamor.html
+++ b/sitedoamor.html
@@ -286,6 +286,13 @@
             <h1 class="display-3 mb-4 fancy-title">Fulana e Sicrano</h1>
             <p class="lead mb-5">Nossa história de amor em fotos e mensagens</p>
         </div>
+
+        <div class="my-4">
+        <audio controls> 
+            <source src="Kiss Me -There She Goes.mp3" type="audio/mp3">Seu avegador não suporta áudio.
+        </audio>
+    </div>
+
     </section>
 
     <!-- Photo Gallery Section -->
