--- a/sitedeeventos.html
+++ b/sitedeeventos.html
@@ -14,6 +14,12 @@
         #inicio{
             background:linear-gradient(135deg, rgb(84, 47, 172) 0%, rgb(124, 36, 196) 100%)
         }
+        .card-header{
+            background-color:rgb(113, 43, 226) !important;
+        }
+        .card-body{
+            background-color:rgb(193, 175, 223) ;
+        }
     </style>
 </head>
 <body>
@@ -33,7 +39,7 @@
                     <a class= "nav-link" href="#inicio">Início</a>
                 </li>
                 <li class="nav-item">
-                    <a class= "nav-link" href="#">Programação</a>
+                    <a class= "nav-link" href="#programacao">Programação</a>
                 </li>
                 <li class="nav-item">
                     <a class= "nav-link" href="#">Ingressos</a>
@@ -42,7 +48,7 @@
                     <a class= "nav-link" href="#">Inscrição </a>
                 </li>
                 <li class="nav-item">
-                    <a class= "nav-link" href="#">Contato</a>
+                    <a class= "nav-link" href="#rodape">Contato</a>
                 </li>
             </ul>
         </div>
@@ -61,7 +67,7 @@
                 <div class="row text-center mb-4">
                     <div class="col-md-4">
                         <h3><i class="fa-solid fa-calendar-days"></i></h3>
-                        <p> 20-23 de agosto</p>
+                        <p> 22-24 de agosto</p>
                     </div>
                     <div class="col-md-4">
                         <h3><i class="fa-solid fa-location-dot"></i></h3>
@@ -82,11 +88,152 @@
         
      </section>
 
+     <!--pagina da programação-->
+     <section id="programacao" class="mb-5">
+        <div class="container">
+            <h2 class="text-center mb-5 mt-3">Programação</h2>
 
+            <div class="row">
 
+                <div class="col-lg-4 mb-4">
+                    <div class="card">
+                        <div class="card-header text-white text-center">
+                            <h4>Sexta-feira - 22/08</h4>
+                        </div>
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between border-botton pb-2 mb-2">
+                                <strong>08:00 a 09:00</strong>
+                                <span>Introdução</span>
+                            </div>
+                            <div class="d-flex justify-content-between border-botton pb-2 mb-2">
+                                <strong>09:30 às 11:30</strong>
+                                <span>Karaokê com os amigos</span>
+                            </div>
+                            <div class="d-flex justify-content-between border-botton pb-2 mb-2">
+                                <strong>11:30 às 14:30 </strong>
+                                <span>apresentação idividual</span>
+                            </div>
+                            <div class="d-flex justify-content-between border-botton pb-2 mb-2">
+                                <strong>14:30 às 22:00</strong>
+                                <span>Apresentações especiais</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                  <div class="col-lg-4 mb-4">
+                    <div class="card">
+                        <div class="card-header text-white text-center">
+                            <h4>Sábado- 23/08</h4>
+                        </div>
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between border-botton pb-2 mb-2">
+                                <strong>08:00 às 09:00</strong>
+                                <span>Introdução</span>
+                            </div>
+                            <div class="d-flex justify-content-between border-botton pb-2 mb-2">
+                                <strong>11:00 às 13:00</strong>
+                                <span>talentos Kids</span>
+                            </div>
+                             <div class="d-flex justify-content-between border-botton pb-2 mb-2">
+                                <strong>13:00 às 15:00</strong>
+                                <span>Apresentação em duplas</span>
+                            </div>
+                            <div class="d-flex justify-content-between border-botton pb-2 mb-2">
+                                <strong>15:00 às 22:00</strong>
+                                <span>Show dos famosos</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                  <div class="col-lg-4 mb-4">
+                    <div class="card">
+                        <div class="card-header text-white text-center">
+                            <h4>Domingo - 24/08</h4>
+                        </div>
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between border-botton pb-2 mb-2">
+                                <strong>08:00 a 09:00</strong>
+                                <span>Introdução</span>
+                            </div>
+                            <div class="d-flex justify-content-between border-botton pb-2 mb-2">
+                                <strong>09:00 às 10:30</strong>
+                                <span>Show dos talentos</span>
+                            </div>
+                             <div class="d-flex justify-content-between border-botton pb-2 mb-2">
+                                <strong>15:30 às 18:00</strong>
+                                <span>Apresentação das bandas</span>
+                            </div>
+                            <div class="d-flex justify-content-between border-botton pb-2 mb-2">
+                                <strong>18:30 às 22:00</strong>
+                                <span>Show dos famosos</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+     </section>
+
+     <!--Pagina da inscrição-->
+     <section>
+        <div class="container">
+            <h2 class="text-center mb-5 mt-5"> Inscrição</h2>
+            <div class="row">
+                <div class="col-lg-4 mb-5">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h4 class="card-title">Apresentações</h4>
+                            <h2 class="text-primary">R$ 100,00</h2>
+                            <p class="card-text">Vagas Limitadas</p>
+                            <ul>
+                                <li>Solistas</li>
+                                <li>Duplas</li>
+                                <li>Bandas</li>
+                            </ul>
+                        </div>
+                    </div>
+                
+
+                </div>
+
+                <div class="col-lg-4 mb-5">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h4 class="card-title">Público geral</h4>
+                            <h2 class="text-primary">R$ 50,00</h2>
+                            <p class="card-text">Acesso a:</p>
+                            <ul>
+                                <li>Banheiros</li>
+                                <li>Karaokês</li>
+                                <li>Àrea para alimentação</li>
+                            </ul>
+                        </div>
+                    </div>
+                    </div>
+
+                    <div class="col-lg-4 mb-5">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h4 class="card-title">Barracas</h4>
+                            <h2 class="text-primary">R$ 200,00</h2>
+                            <p class="card-text">Direito a:</p>
+                            <ul>
+                                <li>Stands</li>
+                                <li>Suporte da equipe</li>
+                                <li>Propaganda na rádio do evento</li>
+                            </ul>
+                        </div>
+
+            </div>
+
+        </div>
+
+     </section>
 
      <!-- Rodapé-->
-    <footer class="bg-dark text-white py-4">
+    <footer id="rodape" class="bg-dark text-white py-4">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
